Correct spacings

--- a/packages/block-library/src/columns/editor.native.scss
+++ b/packages/block-library/src/columns/editor.native.scss
@@ -17,7 +17,7 @@
 }
 
 .cellContainerStyle {
-	flex-direction: row;
+	// flex-direction: row;
 	padding-top: $grid-unit-10;
 	padding-bottom: $grid-unit-10;
 }
